# Git-transition-main

./: README.md
transition/: Cargo.toml  test.rs
transition-macros/: Cargo.toml
transition-macros/src/: generation.rs  lib.rs  version.rs
transition/src/: lib.rs
transition/tests/: basic.rs  enum.rs  tuple_struct.rs
