[package]
name = "transition-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["visit-mut"]}
darling = "0.14"
quote = "1.0"
unsigned-varint = { version = "0.7.1", features = [
    "nom",
], git = "https://github.com/cyphar/unsigned-varint.git", branch = "nom6-errors" }